--- a/example/src/style/screen.css
+++ b/example/src/style/screen.css
@@ -11,6 +11,12 @@ h1,h2,h3,h4 {
   margin: 0;
 }
 
+.scroll-tracker-point {
+  position: absolute;
+  border-top: 1px solid red;
+  border-bottom: 1px solid red;
+}
+
 .abs-center {
   position: absolute;
   left: 50%;
@@ -25,7 +31,6 @@ h1,h2,h3,h4 {
   top: 0;
   left: 0;
 }
-
 
 /* Buttons */
 .button {
