fix scaffold/convert script and add parentController casting.

--- a/template/transition-block/{name_sc}/{name_sc}.hbs
+++ b/template/transition-block/{name_sc}/{name_sc}.hbs
@@ -2,7 +2,7 @@
 <script src="./{{name_pc}}.ts"></script>
 
 {{#comment}}
-  data-scroll-component: used for adding this block with its instance to the scrollTracker on the MubanContentPage
+  data-scroll-component: used for adding this block with its instance to the scrollTracker on the MubanTransitionContentPage
 {{/comment}}
 
 <section
