Add test setup & update scroll-tracker-component-manager

--- a/template/transition-block/{name_sc}/{name_sc}.hbs
+++ b/template/transition-block/{name_sc}/{name_sc}.hbs
@@ -8,6 +8,6 @@
 <section
   data-component="{{name_sc}}"
   class="{{name_sc}}"
-  \{{#if scrollComponent}}data-scroll-component\{{/if}}
+  \{{#if scrollComponent}}data-scroll-component\{{/if}}>
   <h1>{{name_sc}}</h1>
 </section>
