--- a/template/transition-component/{name_sc}/{name_sc}.hbs
+++ b/template/transition-component/{name_sc}/{name_sc}.hbs
@@ -9,7 +9,7 @@ MubanTransitionContentPage
 <div
   data-component="{{name_sc}}"
   class="{{name_sc}}"
-  \{{#if scrollComponent}}data-scroll-component\{{/if}}
+  \{{#if scrollComponent}}data-scroll-component\{{/if}}>
 <h1>{{name_sc}}</h1>
 </div>
 
